Index.html updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="clockContainer">  <!--id is unique whereas class can be used several times-->
+    <div id="clockContainer">  
         <div id="hour"></div>
         <div id="min"></div>
         <div id="sec"></div>
